# mcp-refactoring

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml  server.json
.github/workflows/: bandit.yml  codeql.yml  python-publish.yml
docs/: architecture.md  backend-cli-interface.md  implementation-status.md  publishing.md  target-syntax.md  toon-format.md
src/mcp_refactoring/: __init__.py  __main__.py  server.py
src/mcp_refactoring/adapters/: __init__.py  base.py  python.py  registry.py
src/mcp_refactoring/config/: __init__.py  loader.py  schema.py
src/mcp_refactoring/models/: __init__.py  analysis.py  refactoring.py
src/mcp_refactoring/tools/: __init__.py  analyze_code.py  apply_refactoring.py  inspect_structure.py  list_refactorings.py  preview_refactoring.py
src/mcp_refactoring/utils/: __init__.py  detection.py  subprocess_utils.py  toon.py
tests/: __init__.py  conftest.py
