[project]
name = "mcp-refactoring"
version = "0.1.2"
description = "MCP server exposing Martin Fowler's refactoring catalog to LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Marshall Yount" }
]
keywords = ["mcp", "refactoring", "llm", "code-transformation", "fowler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
mcp-refactoring = "mcp_refactoring:main"

[project.urls]
Homepage = "https://github.com/marshally/mcp-refactoring"
Repository = "https://github.com/marshally/mcp-refactoring"
Issues = "https://github.com/marshally/mcp-refactoring/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_refactoring"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
